--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <head>
       <title>Matthew Goldman's Portfolio</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" href="node_modules/bulma/css/bulma.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.0/css/bulma.css">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-      <link rel="stylesheet" href="node_modules/flickity/css/flickity.css" media="screen">
+      <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
       <link rel="stylesheet" type="text/css" href="main.css">
       <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
       <script src="index.js" type="text/javascript" charset="utf-8" defer></script>
-      <script src="node_modules/flickity/dist/flickity.pkgd.js"></script>
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
     </head>
     <body class="container is-fluid">
       <br>
